objects/Deleted_Address__c.object
<CustomObject>
    <fields>
        <fullName>AccountCAN__c</fullName>
        <externalId>true</externalId>
        <label>CAN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deleted Addresses</relationshipLabel>
        <relationshipName>Deleted_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Addr2__c</fullName>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Name__c</fullName>
        <defaultValue>&quot;Name&quot;</defaultValue>
        <label>Address Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bill To Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deleted_Address_Id__c</fullName>
        <label>Deleted Address Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Deleted_By__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <label>Deleted By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>Latitude</description>
        <label>Latitude</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>Longitude</description>
        <label>Longitude</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ship To Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Siebel_Id__c</fullName>
        <label>Siebel Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UAI__c</fullName>
        <label>Universal Address Identifier(UAI)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Addr2__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>UAI__c</columns>
        <columns>AccountCAN__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>